--- a/SofaEulerianFluidConfig.cmake.in
+++ b/SofaEulerianFluidConfig.cmake.in
@@ -1,5 +1,6 @@
 # CMake package configuration file for the SofaMiscCollision plugin
 
+@PACKAGE_GUARD@
 @PACKAGE_INIT@
 
 find_package(SofaFramework REQUIRED)
