--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,9 @@
 cmake_minimum_required(VERSION 3.12)
 project(SofaEulerianFluid VERSION 1.0)
 
+find_package(SofaFramework REQUIRED)
+find_package(Sofa.GL REQUIRED)
+
 set(HEADER_FILES
     Fluid2D.h
     Fluid3D.h
@@ -23,7 +26,7 @@ set(EXTRA_FILES
     )
 
 add_library(${PROJECT_NAME} SHARED ${HEADER_FILES} ${SOURCE_FILES} ${EXTRA_FILES})
-target_link_libraries(${PROJECT_NAME} SofaCore)
+target_link_libraries(${PROJECT_NAME} SofaCore Sofa.GL)
 #
 #
 ## Install rules for the library and headers; CMake package configurations files
