--- a/SofaEulerianFluidConfig.cmake.in
+++ b/SofaEulerianFluidConfig.cmake.in
@@ -1,9 +1,10 @@
-# CMake package configuration file for the SofaMiscCollision plugin
+# CMake package configuration file for the SofaEulerianFluid plugin
 
 @PACKAGE_GUARD@
 @PACKAGE_INIT@
 
 find_package(SofaFramework REQUIRED)
+find_package(Sofa.GL REQUIRED)
 
 if(NOT TARGET @PROJECT_NAME@)
     include("${CMAKE_CURRENT_LIST_DIR}/@PROJECT_NAME@Targets.cmake")
