--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 3.12)
 project(SofaEulerianFluid VERSION 1.0)
 
-find_package(SofaFramework REQUIRED)
+find_package(Sofa.Core REQUIRED)
 find_package(Sofa.GL REQUIRED)
 
 set(HEADER_FILES
@@ -27,8 +27,8 @@ set(EXTRA_FILES
 
 add_library(${PROJECT_NAME} SHARED ${HEADER_FILES} ${SOURCE_FILES} ${EXTRA_FILES})
 target_link_libraries(${PROJECT_NAME} Sofa.Core Sofa.GL)
-#
-#
+
+
 ## Install rules for the library and headers; CMake package configurations files
 sofa_create_package_with_targets(
     PACKAGE_NAME ${PROJECT_NAME}
