--- a/SofaEulerianFluidConfig.cmake.in
+++ b/SofaEulerianFluidConfig.cmake.in
@@ -3,8 +3,8 @@
 @PACKAGE_GUARD@
 @PACKAGE_INIT@
 
-find_package(SofaFramework REQUIRED)
-find_package(Sofa.GL REQUIRED)
+find_package(Sofa.Core QUIET REQUIRED)
+find_package(Sofa.GL QUIET REQUIRED)
 
 if(NOT TARGET @PROJECT_NAME@)
     include("${CMAKE_CURRENT_LIST_DIR}/@PROJECT_NAME@Targets.cmake")
